# Blockchain-Voting-System

./: .gitignore  CMakeLists.txt
dashboard/: README.txt  app.py  requirements.txt
dashboard/static/: app.js  style.css
dashboard/templates/: index.html
include/: block.h  blockchain.h  consensus.h  json_export.h  rsa_signer.h  voter.h
src/: block.cpp  blockchain.cpp  consensus.cpp  json_export.cpp  main.cpp  rsa_signer.cpp  sha256.cpp  voter.cpp
